Added GSC to head.html

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -3,7 +3,7 @@
   <title>{{ .Title }}</title>
 
   <!-- Google Search Console -->
-
+  <meta name="google-site-verification" content="6f_Uy2LQXxbNlBE9jEwrb_ZO5_gwNe2QFnsGA--QQBM" />
   
   {{ "<!-- mobile responsive meta -->" | safeHTML }}
   <meta name="viewport" content="width=device-width, initial-scale=1" />
