--- a/layouts/partials/events.html
+++ b/layouts/partials/events.html
@@ -11,7 +11,7 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-6 card" style="border-radius: 25px;">
+        <div class="col-md-12 col-lg-6 col-sm-12 card" style="border-radius: 25px;">
           <div class="card-body">
             <h4 class="card-title">School Year Event List</h4>
             <p class="card-subtitle">Our past, present, and future events this school year!</p>
@@ -28,7 +28,7 @@
             </ul>
           </div>
         </div>
-        <div class="col-6">
+        <div class="site-project-calendar col-md-12 col-lg-6 col-sm-12">
           <div id="calendar-small"></div>
         </div>
       </div>
