fixed events size display

--- a/layouts/events/list.html
+++ b/layouts/events/list.html
@@ -91,7 +91,7 @@
         <div class="site-project-partial-scroll ">
           {{ $items := $.Site.Data.planned.items }}
           {{ range $index, $value := $items}}
-          <div class="site-project-partial-scroll-custom col-lg-4 col-md-6 col-sm-12 card mt-3 {{ if  not (eq (add $index 1) (len $items)) }} mr-5 {{end}}">
+          <div class="site-project-partial-scroll-custom col-lg-4 col-md-6 col-sm-12 col-12 card mt-3 {{ if  not (eq (add $index 1) (len $items)) }} mr-5 {{end}}">
             <div class="card-deck">
               <img src="{{ .image | absURL }}" class="card-img" alt="{{ .title }} image">
               <div class="card-body">
@@ -112,7 +112,7 @@
     <div class="site-project-partial-scroll">
       {{ $items := $.Site.Data.planned.items }}
       {{ range $index, $value := $items}}
-      <div class="site-project-partial-scroll-custom col-lg-4 col-md-6 col-sm-12 card mt-3 {{ if eq (add $index 1) (len $items) }} mr-5 {{ else if eq $index 0 }} ml-5 mr-5 {{else}} mr-5 {{end}}">
+      <div class="site-project-partial-scroll-custom col-lg-4 col-md-6 col-sm-12 col-12 card mt-3 {{ if eq (add $index 1) (len $items) }} mr-5 {{ else if eq $index 0 }} ml-5 mr-5 {{else}} mr-5 {{end}}">
         <div class="card-deck">
           <img src="{{ .image }}" class="card-img" alt="{{ .title }} image">
           <div class="card-body">
