--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -7,6 +7,7 @@ $text-color-dark: #00113E;
 $site-ease: cubic-bezier(0.36, 0.03, 0, 0.91);
 $gray: #F7F9FF;
 $dark-gray: #646569;
+$boot-gray: #dfdfdf;
 
 // solid colors
 $white: #fff;
