--- a/assets/scss/components/_announcement.scss
+++ b/assets/scss/components/_announcement.scss
@@ -10,8 +10,11 @@
   }
   &-item{
     border-radius: 20px;
-    background: $gray; 
-
+    border-width: 1px;
+    border-style: solid;
+    background: $white; 
+    //box-shadow: 1px 1px 2px $gray;
+    border-color: $boot-gray;
     @include desktop{
       margin-bottom: 30px;
       text-align: center;
@@ -24,8 +27,12 @@
     }
     &-date {
       margin-left: 20px;
+      color: $black;
+      font-weight: lighter;
     }
     &-desc{
+      font-weight: lighter;
+      color: $black;
       font-size: 20px;
       font-family: "Montserrat", sans-serif;
       margin: 0px 20px;
